--- a/package.json
+++ b/package.json
@@ -13,21 +13,30 @@
     "test-client": "ts-node src/test-client.ts"
   },
   "dependencies": {
-    "@prisma/client": "^5.22.0",
+    "@prisma/client": "^6.6.0",
     "@trpc/client": "^10.45.2",
     "@trpc/server": "^10.45.2",
+    "@types/express-rate-limit": "^6.0.2",
     "@types/jsonwebtoken": "^9.0.9",
+    "bcrypt": "^5.1.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
+    "express-rate-limit": "^7.5.0",
     "jsonwebtoken": "^9.0.2",
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.16",
-    "prisma": "^5.10.0",
+    "jest": "^29.5.0",
+    "prisma": "^6.6.0",
+    "ts-jest": "^29.1.0",
+    "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.3.3"
+    "typescript": "^5.8.3"
   },
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
