--- a/.gitignore
+++ b/.gitignore
@@ -4,14 +4,14 @@ npm-debug.log
 yarn-debug.log
 yarn-error.log
 
+# Build output
+dist/
+build/
+
 # Environment variables
 .env
 .env.local
 .env.*.local
-
-# Build output
-dist/
-build/
 
 # IDE
 .idea/
@@ -27,6 +27,14 @@ Thumbs.db
 logs/
 *.log
 
+# Testing
+coverage/
+
 # Docker
 .docker/
-docker-compose.override.yml 
+docker-compose.override.yml
+
+# Misc
+.cache/
+.temp/
+.tmp/ 
