--- a/package.json
+++ b/package.json
@@ -10,7 +10,13 @@
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
     "seed": "ts-node prisma/seed.ts",
-    "test-client": "ts-node src/test-client.ts"
+    "test-client": "ts-node src/test-client.ts",
+    "lint": "eslint . --ext .ts",
+    "lint:fix": "eslint . --ext .ts --fix",
+    "format": "prettier --write \"src/**/*.ts\"",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "dependencies": {
     "@prisma/client": "^6.6.0",
@@ -35,7 +41,13 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.16",
+    "@typescript-eslint/eslint-plugin": "^7.0.0",
+    "@typescript-eslint/parser": "^7.0.0",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
     "jest": "^29.5.0",
+    "prettier": "^3.2.5",
     "prisma": "^6.6.0",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
